# synpase-wasp

./: .gitignore  Dockerfile  design.pptx  environment.yml  pyproject.toml  readme.md  setup.cfg
data/profile/participants/: _common_metadata  _metadata
k8s/: rbac.yaml  template.yaml
wasp/: config.py  main.py  settings_default.toml  settings_private.toml
wasp/common/: data_reader.py  utils.py
wasp/jobs/: participant.py
wasp/tasks/: swarm.py
